--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "joi": "^17.11.0",
+    "short-unique-id": "^5.0.3"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
