--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,6 +1,6 @@
 node_modules/
 
-.serviceAccountKey.json:
+.serviceAccount.json:
   @echo "Please create a service account key and place it in the root directory of this project as .serviceAccountKey.json"
   @echo "See https://firebase.google.com/docs/admin/setup for more information"
   @exit 1
